--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
     <string name="loading_data_message">Loading data...</string>
     <string name="error_loading_message">An error occurred while loading data from network.</string>
+    <string name="help_circle_title">Help circle</string>
 </resources>
